force-app/main/default/objects/MUSW__GlobalSettings__c/MUSW__GlobalSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>MUSW Global Settings</label>
</CustomObject>