force-app/main/default/objects/MUSW__GlobalSettings__c/fields/Allow_Multiple_Submission_Files__c.field-meta.xml
<CustomField>
    <fullName>Allow_Multiple_Submission_Files__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow upload of multiple files for a single submission request</description>
    <label>Allow Multiple Submission Files</label>
    <type>Checkbox</type>
</CustomField>