force-app/main/default/objects/MUSW__GlobalSettings__c/fields/MUSW__Admin_Password__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Admin_Password__c</fullName>
    <description>Encrypted value used by API calls</description>
    <label>Admin Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>