force-app/main/default/objects/MUSW__GlobalSettings__c/fields/MUSW__Associate_Contacts_Citizen__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Associate_Contacts_Citizen__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, all Contacts will be associated to the Citizen Account. Otherwise a new Person Account will be created for them.</description>
    <inlineHelpText>If checked, all Contacts will be associated to the Citizen Account. Otherwise a new Person Account will be created for them.</inlineHelpText>
    <label>Associate Contacts to Citizen</label>
    <type>Checkbox</type>
</CustomField>