force-app/main/default/objects/MUSW__GlobalSettings__c/fields/MUSW__Attachment_Delete_Access__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Attachment_Delete_Access__c</fullName>
    <inlineHelpText>List of user names (comma separated) allowed to delete attachments. Leave blank if anyone is allowed to delete.</inlineHelpText>
    <label>Attachment Delete Access</label>
    <length>255</length>
    <type>Text</type>
</CustomField>