force-app/main/default/objects/MUSW__GlobalSettings__c/fields/MUSW__ContactDistinctFields__c.field-meta.xml
<CustomField>
    <fullName>MUSW__ContactDistinctFields__c</fullName>
    <defaultValue>'lastname, mailingstreet'</defaultValue>
    <description>Determines which loaded contacts already exist in BG so no duplicates occur</description>
    <inlineHelpText>Contact fields determining record uniqueness. Fieldname list (comma delimited)
eg. lastname, mailingstreet</inlineHelpText>
    <label>ContactDistinctFields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>