force-app/main/default/objects/MUSW__GlobalSettings__c/fields/MUSW__Disable_Triggers__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Disable_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if loading data to disable triggers from running</description>
    <inlineHelpText>Check this box if loading data to disable triggers from running</inlineHelpText>
    <label>Disable Triggers</label>
    <type>Checkbox</type>
</CustomField>