force-app/main/default/objects/MUSW__GlobalSettings__c/fields/MUSW__Dissociate_Accounts_Contacts__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Dissociate_Accounts_Contacts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, new Accounts won't have Contacts created for them</description>
    <inlineHelpText>If checked, new Accounts won't have Contacts created for them</inlineHelpText>
    <label>Accounts dont create matching Contacts</label>
    <type>Checkbox</type>
</CustomField>