force-app/main/default/objects/MUSW__GlobalSettings__c/fields/MUSW__Dissociate_Contacts_Person_Account__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Dissociate_Contacts_Person_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>BG Person Accounts. If true, person Accounts are not created. Typically this setting is false.</inlineHelpText>
    <label>Contacts don't create Person Accounts</label>
    <type>Checkbox</type>
</CustomField>