force-app/main/default/objects/MUSW__GlobalSettings__c/fields/MUSW__Organization_Country__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Organization_Country__c</fullName>
    <defaultValue>"US"</defaultValue>
    <description>Allows Apex to reference the org's country without having to query the Organization table</description>
    <inlineHelpText>eg US, CANADA, etc.</inlineHelpText>
    <label>Organization Country</label>
    <length>30</length>
    <type>Text</type>
</CustomField>