force-app/main/default/objects/MUSW__GlobalSettings__c/fields/MUSW__Set_ParcelName_As_Address_And_Number__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Set_ParcelName_As_Address_And_Number__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, the parcel name is update with the parcel's address and number</description>
    <inlineHelpText>If checked, the parcel name is update with the parcel's address and number</inlineHelpText>
    <label>Set Parcel Name with Address and Number</label>
    <type>Checkbox</type>
</CustomField>